# infractl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/adr/: 0001-moteur-vs-etat.md  0002-connexion-locale.md  0003-acme-dns01-wildcard.md  0004-traefik-conf-fichier.md  0005-versions-epinglees.md  0006-seed-nocloud-virtio.md  0007-robustesse-environnement-moteur.md  0008-sso-par-defaut-entrypoint.md  0009-public-par-exception.md  0010-secrets-authelia.md  0011-routes-backends-externes.md  0012-crowdsec-bouncer-plugin.md
src/infractl/: cli.py
src/infractl/ansible/: ansible.cfg  requirements.yml  site.yml
src/infractl/ansible/inventory/: hosts.yml
src/infractl/ansible/inventory/group_vars/: all.yml
src/infractl/ansible/roles/authelia/defaults/: main.yml
src/infractl/ansible/roles/authelia/handlers/: main.yml
src/infractl/ansible/roles/authelia/tasks/: main.yml
src/infractl/ansible/roles/authelia/templates/: configuration.yml.j2  middleware.yml.j2  public.yml.j2
src/infractl/ansible/roles/crowdsec/defaults/: main.yml
src/infractl/ansible/roles/crowdsec/handlers/: main.yml
src/infractl/ansible/roles/crowdsec/tasks/: main.yml
src/infractl/ansible/roles/crowdsec/templates/: acquis-traefik.yaml.j2  crowdsec.yml.j2
src/infractl/ansible/roles/docker/defaults/: main.yml
src/infractl/ansible/roles/docker/tasks/: main.yml
src/infractl/ansible/roles/socle/tasks/: main.yml
src/infractl/ansible/roles/traefik/defaults/: main.yml
src/infractl/ansible/roles/traefik/handlers/: main.yml
tools/: labctl
(+8 files in other folders)
